[project]
name = "app_store"
version = "0.1.0"
description = "App_Store using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
    "streamlit>=1.57.0",
]

[project.scripts]
app_store = "app_store.main:run"
run_crew = "app_store.main:run"
train = "app_store.main:train"
replay = "app_store.main:replay"
test = "app_store.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
